@@ -23,24 +23,33 @@
 package org.openjdk.bench.javax.crypto.full;
 
 import org.openjdk.jmh.annotations.Benchmark;
+import org.openjdk.jmh.annotations.Fork;
 import org.openjdk.jmh.annotations.OperationsPerInvocation;
 import org.openjdk.jmh.annotations.Param;
 import org.openjdk.jmh.annotations.Setup;
 import org.openjdk.jmh.infra.Blackhole;
 
 import javax.crypto.DecapsulateException;
+import java.security.GeneralSecurityException;
+import java.security.InvalidAlgorithmParameterException;
 import javax.crypto.KEM;
 import java.security.InvalidKeyException;
 import java.security.KeyPair;
 import java.security.KeyPairGenerator;
 import java.security.NoSuchAlgorithmException;
+import java.security.Provider;
+import java.security.Security;
+import java.security.spec.ECGenParameterSpec;
 
-public class KEMBench extends CryptoBase {
+public abstract class KEMBench extends CryptoBase {
 
     public static final int SET_SIZE = 128;
 
-    @Param({"ML-KEM-512", "ML-KEM-768", "ML-KEM-1024" })
+    @Param({})
     private String algorithm;
+
+    @Param({""})        // Used when the KeyPairGenerator Alg != KEM Alg
+    private String kpgSpec;
 
     private KeyPair[] keys;
     private byte[][] messages;
@@ -48,9 +57,35 @@ public class KEMBench extends CryptoBase {
     private KEM kem;
 
     @Setup
-    public void setup() throws NoSuchAlgorithmException, InvalidKeyException {
-        kem = (prov == null) ? KEM.getInstance(algorithm) : KEM.getInstance(algorithm, prov);
-        KeyPairGenerator generator = (prov == null) ? KeyPairGenerator.getInstance(algorithm) : KeyPairGenerator.getInstance(algorithm, prov);
+    public void setup() throws NoSuchAlgorithmException, InvalidKeyException,
+            InvalidAlgorithmParameterException {
+        String kpgAlg;
+        String kpgParams;
+        kem = (prov == null) ? KEM.getInstance(algorithm) :
+                KEM.getInstance(algorithm, prov);
+
+        // By default use the same provider for KEM and KPG
+        Provider kpgProv = prov;
+        if (kpgSpec.isEmpty()) {
+            kpgAlg = algorithm;
+            kpgParams = "";
+        } else {
+            // The key pair generation spec is broken down from a colon-
+            // delimited string spec into 3 fields:
+            // [0] - the provider name
+            // [1] - the algorithm name
+            // [2] - the parameters (i.e. the name of the curve)
+            String[] kpgTok = kpgSpec.split(":");
+            kpgProv = Security.getProvider(kpgTok[0]);
+            kpgAlg = kpgTok[1];
+            kpgParams = kpgTok[2];
+        }
+        KeyPairGenerator generator = (kpgProv == null) ?
+                    KeyPairGenerator.getInstance(kpgAlg) :
+                    KeyPairGenerator.getInstance(kpgAlg, kpgProv);
+        if (kpgParams != null && !kpgParams.isEmpty()) {
+            generator.initialize(new ECGenParameterSpec(kpgParams));
+        }
         keys = new KeyPair[SET_SIZE];
         for (int i = 0; i < keys.length; i++) {
             keys[i] = generator.generateKeyPair();
@@ -63,20 +98,79 @@ public class KEMBench extends CryptoBase {
         }
     }
 
+    private static Provider getInternalJce() {
+        try {
+            Class<?> dhClazz = Class.forName("sun.security.ssl.HybridProvider");
+            return (Provider) dhClazz.getField("PROVIDER").get(null);
+        } catch (ReflectiveOperationException exc) {
+            throw new RuntimeException(exc);
+        }
+    }
+
     @Benchmark
     @OperationsPerInvocation(SET_SIZE)
     public void encapsulate(Blackhole bh) throws InvalidKeyException {
         for (KeyPair kp : keys) {
-            bh.consume(kem.newEncapsulator(kp.getPublic()).encapsulate().encapsulation());
+            bh.consume(kem.newEncapsulator(kp.getPublic()).encapsulate().
+                    encapsulation());
         }
     }
 
     @Benchmark
     @OperationsPerInvocation(SET_SIZE)
-    public void decapsulate(Blackhole bh) throws InvalidKeyException, DecapsulateException {
+    public void decapsulate(Blackhole bh) throws InvalidKeyException,
+            DecapsulateException {
         for (int i = 0; i < messages.length; i++) {
-            bh.consume(kem.newDecapsulator(keys[i].getPrivate()).decapsulate(messages[i]));
+            bh.consume(kem.newDecapsulator(keys[i].getPrivate()).
+                    decapsulate(messages[i]));
         }
     }
 
+    public static class MLKEM extends KEMBench {
+        @Param({"ML-KEM-512", "ML-KEM-768", "ML-KEM-1024" })
+        private String algorithm;
+
+        @Param({""})            // ML-KEM uses the same alg for KPG and KEM
+        private String kpgSpec;
+    }
+
+    @Fork(value = 5, jvmArgs = {"-XX:+AlwaysPreTouch", "--add-opens",
+            "java.base/sun.security.ssl=ALL-UNNAMED"})
+    public static class JSSE_DHasKEM extends KEMBench {
+        @Setup
+        public void init() {
+            try {
+                prov = getInternalJce();
+                super.setup();
+            } catch (GeneralSecurityException gse) {
+                throw new RuntimeException(gse);
+            }
+        }
+
+        @Param({"DH"})
+        private String algorithm;
+
+        @Param({"SunEC:XDH:x25519", "SunEC:EC:secp256r1", "SunEC:EC:secp384r1"})
+        private String kpgSpec;
+    }
+
+    @Fork(value = 5, jvmArgs = {"-XX:+AlwaysPreTouch", "--add-opens",
+            "java.base/sun.security.ssl=ALL-UNNAMED"})
+    public static class JSSE_Hybrid extends KEMBench {
+        @Setup
+        public void init() {
+            try {
+                prov = getInternalJce();
+                super.setup();
+            } catch (GeneralSecurityException gse) {
+                throw new RuntimeException(gse);
+            }
+        }
+
+        @Param({"X25519MLKEM768", "SecP256r1MLKEM768", "SecP384r1MLKEM1024"})
+        private String algorithm;
+
+        @Param({""})            // ML-KEM uses the same alg for KPG and KEM
+        private String kpgSpec;
+    }
 }
